--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,8 +8,8 @@
   <div class="form-group">
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
-  </div>
-  <div class="form-group">
-    <%= f.submit "Create Book",  class: 'btn btn-success' %>
-  </div>
+    </div>
+    <div class="form-group">
+    <%= f.submit  class: 'btn btn-success' %>
+   </div>
 <% end %>
