--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,5 +10,5 @@
   </tr>
 </table>
 <div class='row'>
-  <%= link_to 'Edit',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <%= link_to 'edit',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
